--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,53 +10,27 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
- <!--   <filter>
-    <filter-name>LocaleRequestFilter</filter-name>
-    <filter-class>
-        com.multibrand.web.context.request.LocaleRequestFilter
-    </filter-class>
-</filter>
-<filter-mapping>
-    <filter-name>LocaleRequestFilter</filter-name>
-    <url-pattern>/rest/*</url-pattern>
-</filter-mapping>
-
-<context-param>
+  <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>
-        /WEB-INF/spring/NRGREST-appContext.xml
-    </param-value>
-</context-param>
-
-<listener>
-    <listener-class>
+    <param-value>/WEB-INF/spring/NRGREST-appContext.xml</param-value>
+  </context-param>
+  
+  <listener>
+   	<listener-class>
         org.springframework.web.context.ContextLoaderListener
-    </listener-class>
-</listener>
-
+   	</listener-class>
+  </listener>
   
- 
+  <listener>
+	<listener-class>
+		org.springframework.web.context.request.RequestContextListener
+	</listener-class>
+  </listener>
+  
   <servlet>
-    <servlet-name>NRGRESTService</servlet-name>
-    <servlet-class>
-        org.springframework.web.servlet.DispatcherServlet
-    </servlet-class>
-    <init-param>
-        <param-name>contextConfigLocation</param-name>
-         <param-value>/WEB-INF/spring/NRGREST-appContext.xml</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-</servlet>
-  
-	<servlet-mapping>
-		<servlet-name>NRGRESTService</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
-	</servlet-mapping> -->
-  
- <!--  <servlet>
 		<servlet-name>NRGRESTService</servlet-name>
 		<servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+<!--         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class> -->
 		<init-param>
 			<param-name>com.sun.jersey.config.property.packages</param-name>
 			<param-value>com.multibrand.resources</param-value>
@@ -74,5 +48,5 @@
 	<servlet-mapping>
 		<servlet-name>NRGRESTService</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
-	</servlet-mapping> -->
+	</servlet-mapping>
 </web-app>
