OE:Sprint61:US21009: Capture and Validate Agent Data from POSID API

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -160,3 +160,6 @@ pw.prodbonus.schema.id=TODO
 gm.prodoffer.schema.id =6969
 gm.prodbonus.schema.id=TODO
 gm.base.url=https://stg-signup.greenmountain.com
+
+rest.api.user.name=nrgapi
+rest.api.password=tester
