--- a/src/main/resources/properties/db/dbsql.properties
+++ b/src/main/resources/properties/db/dbsql.properties
@@ -44,4 +44,4 @@ query.gme.validate.password.link=SELECT to_char(expiration_date,'YYYY-MM-DD hh24
 query.get.user.login.id=select gme_res_main.Ol_ACCOUNT.USER_LOGIN_ID from gme_res_main.ol_external_request , gme_res_main.Ol_ACCOUNT where ol_external_request.user_unique_id = Ol_ACCOUNT.user_unique_id and ol_external_request.transaction_id=?
 
 #WSE Email Archiving
-query.get.wse.sqlQuery=SELECT EMAIL_FILE_NAME, EMAIL_SENT_DATE, EMAIL_ADDRESS, CONTRACT_ACCOUNT_NUMBER, VIEW_EMAIL_URL, CONTRACT_NUMBER FROM CPDB1_MAIN.SF_WSE_ARCHIVE WHERE CONTRACT_ACCOUNT_NUMBER=? AND COMPANY_CODE=? 
+query.get.wse.sqlQuery=SELECT EMAIL_FILE_NAME, EMAIL_SENT_DATE, EMAIL_ADDRESS, CONTRACT_ACCOUNT_NUMBER, VIEW_EMAIL_URL, CONTRACT_NUMBER FROM CPDB1_MAIN.SF_WSE_ARCHIVE WHERE CONTRACT_ACCOUNT_NUMBER = ? AND COMPANY_CODE = ? AND TRUNC(EMAIL_SENT_DATE) >= TRUNC(SYSDATE - ?) ORDER BY EMAIL_SENT_DATE DESC
