PBI: 10261: Add Branch Param back for sonar-project

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectName=nrg-rest-services
 sonar.projectVersion=1-RELEASE
 sonar.projectKey=nrg-rest-services
-#sonar.branch.name=${env.BRANCH_NAME}
-#sonar.branch.target=master
+sonar.branch.name=${env.BRANCH_NAME}
+sonar.branch.target=master
 sonar.tests=src/test
 sonar.exclusions=src/main/webapp/**
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
