[XOOM]:Added promo text

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -31,6 +31,18 @@ D0005=AEP Texas North
 D0009=Sharyland Utilities
 ######################## OE ENDS ######################
 
+#################XOOM Channel Partner to promo code Mapping#########
+002=WBXA7B
+022=WBXA7C
+012=WBXA7D
+027=WBXA7E
+078=WBXA7F
+084=WBXA7G
+001=WBXA7H
+
+
+
+
 ######For enabling/disabling Utility logger############
 utility.logging=true
 
