--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 				<dependency.scope>compile</dependency.scope>
 				<skip.integration.tests>false</skip.integration.tests>
 				<skip.unit.tests>false</skip.unit.tests>
+				<exclude>**/com/it/reliant/**/*.java</exclude>
 			</properties>
 		</profile>
 		<profile>
@@ -53,6 +54,7 @@
 				<skip.unit.tests>false</skip.unit.tests>
 				<snapshot-version></snapshot-version>
 				<snapshot-enabled>false</snapshot-enabled>
+				<exclude>**/com/it/reliant/**/*.java</exclude>
 			</properties>
 		</profile>
 		<profile>
@@ -61,11 +63,64 @@
 				<resources-filter-plugin-phase>none</resources-filter-plugin-phase>
 				<skip.integration.tests>true</skip.integration.tests>
 				<skip.unit.tests>false</skip.unit.tests>
+				<exclude>**/com/it/reliant/**/*.java</exclude>
 			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 		</profile>
+		<profile>
+                     <id>karate-profile</id>
+                     <properties>
+                        <skipPluginPhase>true</skipPluginPhase>
+                        <exclude>**/com/reliant/**/*.java</exclude>
+                        <reportsDirectory>${basedir}/target/surefire-reports/</reportsDirectory>
+                     </properties>
+                     
+                   
+                     <build>
+                           <plugins>
+                                  
+                                  <plugin>
+                                 <groupId>net.masterthought</groupId>
+                                 <artifactId>maven-cucumber-reporting</artifactId>
+                                 <version>4.7.0</version>
+                                 <executions>
+                                     <execution>
+                                         <id>execution</id>
+                                         <phase>verify</phase>
+                                         <goals>
+                                             <goal>generate</goal>
+                                         </goals>
+                                         <configuration>
+                                             <projectName>sample-karate-project</projectName>
+                                             <!-- optional, per documentation set this to "true" to bypass generation of Cucumber Reports entirely, defaults to false if not specified -->
+                                             <skip>false</skip>
+                                             <!-- output directory for the generated report -->
+                                             <outputDirectory>${project.build.directory}</outputDirectory>
+                                             <!-- optional, defaults to outputDirectory if not specified -->
+                                             <inputDirectory>${project.build.directory}/surefire-reports</inputDirectory>
+                                             <jsonFiles>
+                                                 supports wildcard or name pattern
+                                                 <param>**/*.json</param>
+                                             </jsonFiles>
+                                             <!-- optional, defaults to outputDirectory if not specified -->
+                                             <classificationDirectory>${project.build.directory}/</classificationDirectory>
+                                             <classificationFiles>
+                                                 supports wildcard or name pattern
+                                                 <param>sample.properties</param>
+                                                 <param>other.properties</param>
+                                             </classificationFiles>
+                                             <!-- <parallelTesting>false</parallelTesting> -->
+                                             <!-- optional, set true to fail build on test failures -->
+                                             <checkBuildResult>true</checkBuildResult>
+                                         </configuration>
+                                     </execution>
+                                 </executions>
+                             </plugin>
+                           </plugins>
+                     </build>
+              </profile>
 	</profiles>
 	<build>
 		<finalName>nrgrest</finalName>
@@ -130,9 +185,9 @@
 					<skipTests>${skip.unit.tests}</skipTests>
 					<parallel>methods</parallel>
 					<threadCount>10</threadCount>
-					<includes>
-						<include>**/*Test.class</include>
-					</includes>
+					<excludes>
+                           <exclude>${exclude}</exclude>
+                     </excludes>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -592,6 +647,37 @@
 		</plugins>
 	</build>
 	<dependencies>
+	  <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
+       </dependency>
+	 <dependency>
+            <groupId>com.intuit.karate</groupId>
+            <artifactId>karate-junit4</artifactId>
+            <version>0.9.3</version>
+            <scope>test</scope>
+     </dependency>
+     <dependency>
+            <groupId>com.intuit.karate</groupId>
+            <artifactId>karate-apache</artifactId>
+            <version>0.9.3</version>
+            <scope>test</scope>
+     </dependency>
+     <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>4.7.0</version>
+            <scope>test</scope>
+     </dependency>
+     <dependency>
+            <groupId>com.intuit.karate</groupId>
+            <artifactId>karate-gatling</artifactId>
+            <version>0.9.3.RC1</version>
+            <scope>test</scope>
+     </dependency>
+     
 		<dependency>
 			<groupId>com.nrg.util</groupId>
 			<artifactId>nrg-utility-svc-email-jaxb-stubs</artifactId>
@@ -727,7 +813,7 @@
 		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
-		    <version>1.3.1</version>
+		    <version>2.0</version>
 		</dependency>		
 		<dependency>
 			<groupId>commons-httpclient</groupId>
@@ -819,13 +905,7 @@
 		    <groupId>org.springframework.data</groupId>
 		    <artifactId>spring-data-oracle</artifactId>
 		    <version>1.0.0.RELEASE</version>
-		</dependency>		
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
+		</dependency>				
 		<dependency>
 		    <groupId>com.thoughtworks.xstream</groupId>
 		    <artifactId>xstream</artifactId>
