--- a/src/main/resources/properties/db/dbsql.properties
+++ b/src/main/resources/properties/db/dbsql.properties
@@ -43,3 +43,5 @@ query.gme.update.password.status.code=UPDATE gme_res_main.ol_external_request se
 query.gme.validate.password.link=SELECT to_char(expiration_date,'YYYY-MM-DD hh24:mi:ss') expiration_date FROM gme_res_main.OL_EXTERNAL_REQUEST WHERE  STATUS_FLAG='O' AND TRANSACTION_ID=?
 query.get.user.login.id=select gme_res_main.Ol_ACCOUNT.USER_LOGIN_ID from gme_res_main.ol_external_request , gme_res_main.Ol_ACCOUNT where ol_external_request.user_unique_id = Ol_ACCOUNT.user_unique_id and ol_external_request.transaction_id=?
 db.choice.reliant.addkbadetailsquery=INSERT into CHOICE.KBA_API(KBA_TRANSACTION_KEY,DECISION,QUESTION_COUNT,IDENTITY_SCORE,OVERALL_SCORE,INTERACTIVE_QSCORE,FRAUD_LEVEL,SAP_RETURN_CODE,SAP_RETURN_MESSAGE,EQ_ERROR_CODE,EQ_ERROR_MESSAGE,REASON_CODE_LIST)values(?,?,?,?,?,?,?,?,?,?,?,?)
+
+db.choice.reliant.updatekbadetailsquery =update CHOICE.KBA_API set DECISION =?,IDENTITY_SCORE=?,OVERALL_SCORE = ?,INTERACTIVE_QSCORE= ?,FRAUD_LEVEL=?,SAP_RETURN_CODE= ?,SAP_RETURN_MESSAGE= ?,EQ_ERROR_CODE= ?,EQ_ERROR_MESSAGE= ?,REASON_CODE_LIST= ? where KBA_TRANSACTION_KEY = ?
