--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
 	<properties>
 		<jdk.version>1.7</jdk.version>
+		<mockito.version>1.10.19</mockito.version>
 		<testng.version>6.14.3</testng.version>
 		<project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
 		<junit.version>4.11</junit.version>
@@ -648,6 +649,12 @@
 		</plugins>
 	</build>
 	<dependencies>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
