--- a/src/main/resources/properties/db/dbsql.properties
+++ b/src/main/resources/properties/db/dbsql.properties
@@ -12,11 +12,13 @@ query.sequence.nextVal =select {0}.nextval id from dual
 proc.addperson = spk_choice_manage.person_affiliate_add
 proc.updateperson = spk_choice_manage.person_affiliate_upd
 query.get.personAffiliate.id.by.trackingNo=select person_id from choice.service_location_affiliate where tracking_number=?
+query.get.personAffiliate.id.by.trackingNo.guid=select person_id from choice.service_location_affiliate where tracking_number=? and guid_id=?
 query.get.personAffiliate.id.and.retrycount.by.trackingNo=select p.person_id as personId, p.retry_count as retryCount from choice.service_location_affiliate s, choice.person_affiliate p where s.tracking_number=? and s.person_id=p.person_id
 query.get.esidCount.sqlQuery=select count(*) as count from esi.esi_type_status where esiid = {0}
 query.get.esidType.sqlQuery=SELECT ESIID,STATUS,PREMISE_TYPE FROM ESI.ESI_TYPE_STATUS WHERE (PREMISE_TYPE = ''Residential'' AND (STATUS IS NULL OR STATUS IN (''De-Energized'',''Active''))) AND ESIID = {0}
 query.get.personAffiliate.details.by.personId=select * from choice.person_affiliate where person_id=?
 query.get.serviceLocationAffiliate.details.by.trackingId=select * from choice.service_location_affiliate where tracking_number=?
+query.get.serviceLocationAffiliate.details.by.trackingId.guid=select * from choice.service_location_affiliate where tracking_number=? and guid_id=? 
 
 #CHG0019468 Changes Start
 query.get.user.id=SELECT OLACT.USER_LOGIN_ID FROM OL_CA OLCA,OL_ACCOUNT OLACT WHERE OLCA.USER_UNIQUE_ID=OLACT.USER_UNIQUE_ID AND OLCA.CONTRACT_ACCOUNT_NUMBER=?
