Reliant Sales - Fixed non prod Token API Endpoint URL

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -51,8 +51,10 @@ rest.url.timeout=30
 ###################
 
 #OTHER THIRD PARTY END POINTS
-tokenServerUrl=https://pwared01:8443/cardsecure/cs
+#tokenServerUrl=https://pwared01:8443/cardsecure/cs
+tokenServerUrl=https://rripcid01:8443/cardsecure/cs
 cardsecureUrl=https://txaixpiid01:8443/cardsecure/cs
+
 #################
 
 #OTHER INTERNAL END POINTS
