--- a/pom.xml
+++ b/pom.xml
@@ -944,7 +944,7 @@
 		<dependency>
 		    <groupId>com.thoughtworks.xstream</groupId>
 		    <artifactId>xstream</artifactId>
-		    <version>1.4.4</version>
+		    <version>1.4.11.1</version>
 		</dependency>		
 <!-- 		
 		<dependency>
@@ -1071,7 +1071,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-validation-domain</artifactId>
-			<version>4</version>
+			<version>9-SNAPSHOT</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
