Relase Notes Added

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=0.0.0
-release.title=enter-your-title
-release.description=enter your description
+release.version=3.0.0
+release.title=Retro Features included for GME Mobile
+release.description=Retro Average calculation functionality include for GME Mobile APP. 
 release.date=03/12/2020
