az pipeline : remove space, job's name cannot have them

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ jobs:
 
 - template: create_release_notes_n_autotag.yml@templates
 
-- job: trigger jenkins
+- job: trigger_jenkins
   displayName: trigger jenkins pipeline
   steps:
   - task: JenkinsQueueJob@2
