--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -182,3 +182,6 @@ togglz.default.groupName=SalesAPI
 
 RetroAmbPercentageValue=10
 contractAccountNumberRetro=000000000000
+
+#//START : GMD APIS
+CCS_GMD_STMT=http://saprpm01:8080/sap/bc/srt/rfc/sap/z_e_isu_get_gmd_stmt/900/z_e_isu_get_gmd_stmt/z_e_isu_get_gmd_stmt
