GMD APP new API's for prepay customers

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -23,6 +23,15 @@ ccs.tdsp.web.equivalent.D0004=03278
 ccs.tdsp.web.equivalent.D0005=20404
 ccs.tdsp.web.equivalent.D0009=03109
 
+
+######################For GMD APP STARTS####################
+gmd.promo.web.equivalent.D0001=ZBXPNB
+gmd.promo.web.equivalent.D0002=ZBXPNC
+gmd.promo.web.equivalent.D0003=ZBXPNF
+gmd.promo.web.equivalent.D0004=ZBXPND
+gmd.promo.web.equivalent.D0005=ZBXPNE
+######################For GMD APP ENDS####################
+
 D0001=CenterPoint Energy
 D0002=ONCOR
 D0003=Texas-New Mexico Power Company 
