Reliant Sales Release 15.0.0 - Updated release.properties

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=3.0.0
-release.title=Retro Features included for GME Mobile
-release.description=Retro Average calculation functionality include for GME Mobile APP. 
-release.date=03/12/2020
+release.version=4.0.0
+release.title=Reliant Sales API Release II
+release.description=Reliant Sales API Release II
+release.date=04/02/2020
