Reliant Sales - POSID Hold and Prospect No Match message and changed Pennywise to Discount Power

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -37,7 +37,7 @@ utility.logging=true
 0121=Reliant
 0271=Green Mountain
 0391=Cirro
-0391=Pennywise
+0391=Discount Power
 0400=Everything Energy
 
 url.new.occupant.confirmation.form.reliant=https://www.reliant.com/en/residential/customer-care/new_occupant_confirmation.jsp
