--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -63,7 +63,7 @@ ws.endpointURL.addressvalidationDomain=http://dev1-ws.nrgenergy.com/NRGWS02/Addr
 ws.endpointURL.billingDomain=http://dev1-ws.nrgenergy.com/NRGWS02/BillingDomain
 ws.endpointURL.historyDomain=http://dev1-ws.nrgenergy.com/NRGWS02/HistoryDomain
 ws.endpointURL.ldapDomain=http://dev1-ws.nrgenergy.com/NRGWS02/LDAPDomain
-ws.endpointURL.oeDomain=http://dev1-ws.nrgenergy.com/NRGWS02/OEDomain
+ws.endpointURL.oeDomain=http://stg1-ws.nrgenergy.com/NRGWS02/OEDomain
 ws.endpointURL.paymentDomain=http://dev1-ws.nrgenergy.com/NRGWS02/PaymentDomain
 ws.endpointURL.profileDomain=http://dev1-ws.nrgenergy.com/NRGWS02//ProfileDomain
 ws.endpointURL.swapDomain=http://dev1-ws.nrgenergy.com/NRGWS02/SwapDomain
