--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -62,3 +62,4 @@ re.taxonomy.id = 301
 pw.taxonomy.id = TODO
 ce.taxonomy.id = TODO
 gm.taxonomy.id = TODO
+paymentextension.bypass.eligible.flag = X
