GMD APP enrollment fix for NOPOSID

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -68,7 +68,7 @@ ws.endpointURL.paymentDomain=http://dev1-ws.nrgenergy.com/NRGWS02/PaymentDomain
 ws.endpointURL.profileDomain=http://dev1-ws.nrgenergy.com/NRGWS02//ProfileDomain
 ws.endpointURL.swapDomain=http://dev1-ws.nrgenergy.com/NRGWS02/SwapDomain
 ws.endpointURL.tosDomain=http://dev1-ws.nrgenergy.com/NRGWS02/TOSDomain
-ws.endpointURL.ssDomain=http://dev1-ws.nrgenergy.com/NRGWS02/SSDomain
+ws.endpointURL.ssDomain=http://stg1-ws.nrgenergy.com/NRGWS02/SSDomain
 ws.endpointURL.temperatureService=http://txaixebxindxd01:13180/UsageHistoryRest
 ws.endpointURL.preferenceDomain=http://dev1-ws.nrgenergy.com/NRGWS02/PreferencesDomain
 EBILL_DOCUMENTUM_END_POINT_URL=http://dev1-ws.nrgenergy.com/DocumentServiceClient/GetEBill
@@ -186,4 +186,4 @@ contractAccountNumberRetro=000000000000
 #//START : GMD APIS
 CCS_GMD_STMT = http://saprpm01:8080/sap/bc/srt/rfc/sap/z_e_isu_get_gmd_stmt/900/z_e_isu_get_gmd_stmt/z_e_isu_get_gmd_stmt
 CCS_PRICE_STMT = http://saprpm01:8080/sap/bc/srt/rfc/sap/z_e_isu_get_gmd_price/900/z_e_isu_get_gmd_price/z_e_isu_get_gmd_price
-									 
+gmd_price-current_date =04/05/2020							 
