GMD Enrolement API Offer codes and Promos codes reading from app costants

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -25,11 +25,18 @@ ccs.tdsp.web.equivalent.D0009=03109
 
 
 ######################For GMD APP STARTS####################
-gmd.promo.web.equivalent.D0001=ZBXPNB
-gmd.promo.web.equivalent.D0002=ZBXPNC
-gmd.promo.web.equivalent.D0003=ZBXPNF
-gmd.promo.web.equivalent.D0004=ZBXPND
-gmd.promo.web.equivalent.D0005=ZBXPNE
+gmd.promo.web.equivalent.D0001=ZBZBKZ
+gmd.promo.web.equivalent.D0002=ZBZBM0
+gmd.promo.web.equivalent.D0003=ZBZBM1
+gmd.promo.web.equivalent.D0004=ZBZBM2
+gmd.promo.web.equivalent.D0005=ZBZBM3
+
+gmd.offer.web.equivalent.D0001=11071
+gmd.offer.web.equivalent.D0002=11072
+gmd.offer.web.equivalent.D0003=11073
+gmd.offer.web.equivalent.D0004=11074
+gmd.offer.web.equivalent.D0005=11075
+
 ######################For GMD APP ENDS####################
 
 D0001=CenterPoint Energy
