GMD Legal documents

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -37,6 +37,12 @@ gmd.offer.web.equivalent.D0003=11075
 gmd.offer.web.equivalent.D0004=11073
 gmd.offer.web.equivalent.D0005=11074
 
+gmd.offer.efl.equivalent.D0001=090175168088b0ce
+gmd.offer.efl.equivalent.D0002=090175168088b0cf
+gmd.offer.efl.equivalent.D0003=090175168088b0d2
+gmd.offer.efl.equivalent.D0004=090175168088b0d0
+gmd.offer.efl.equivalent.D0005=090175168088b0d1
+
 ######################For GMD APP ENDS####################
 
 D0001=CenterPoint Energy
