Fix for GMD Statemen

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -43,6 +43,26 @@ gmd.offer.efl.equivalent.D0003=090175168088b0d2
 gmd.offer.efl.equivalent.D0004=090175168088b0d0
 gmd.offer.efl.equivalent.D0005=090175168088b0d1
 
+
+gmd.offer.tos.equivalent.D0001=090175168088b0cd
+gmd.offer.tos.equivalent.D0002=090175168088b0cd
+gmd.offer.tos.equivalent.D0003=090175168088b0cd
+gmd.offer.tos.equivalent.D0004=090175168088b0cd
+gmd.offer.tos.equivalent.D0005=090175168088b0cd
+
+
+gmd.offer.yraac.equivalent.D0001=0901751880ebff66
+gmd.offer.yraac.equivalent.D0002=0901751880ebff66
+gmd.offer.yraac.equivalent.D0003=0901751880ebff66
+gmd.offer.yraac.equivalent.D0004=0901751880ebff66
+gmd.offer.yraac.equivalent.D0005=0901751880ebff66
+
+gmd.offer.predis.equivalent.D0001=090175168088b0cc
+gmd.offer.predis.equivalent.D0002=090175168088b0cc
+gmd.offer.predis.equivalent.D0003=090175168088b0cc
+gmd.offer.predis.equivalent.D0004=090175168088b0cc
+gmd.offer.predis.equivalent.D0005=090175168088b0cc
+
 ######################For GMD APP ENDS####################
 
 D0001=CenterPoint Energy
