--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -164,6 +164,7 @@ pw.prodbonus.schema.id=TODO
 gm.prodoffer.schema.id =6969
 gm.prodbonus.schema.id=TODO
 gm.base.url=https://stg-signup.greenmountain.com
+gm.prod.base.url=https://signup.greenmountain.com
 
 #//START : OE :Sprint62 :US21019 :Kdeshmu1
 rest.api.user.name=nrgapi
