--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
 - job: build
   displayName: Compile and test
   steps:
-  - bash: mvn clean
+  - bash: mvn clean test
 
 - template: create_release_notes_n_autotag.yml@templates
 
