Committed for DPP Eligibility Check

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -63,3 +63,5 @@ pw.taxonomy.id = TODO
 ce.taxonomy.id = TODO
 gm.taxonomy.id = TODO
 paymentextension.bypass.eligible.flag = X
+dpp.bypass.eligible.flag = X
+dpp.default.flag = X
