--- a/pom.xml
+++ b/pom.xml
@@ -973,7 +973,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-payment-domain</artifactId>
-			<version>9-SNAPSHOT</version> 
+			<version>11-20200419.072552-1</version> 
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
