--- a/pom.xml
+++ b/pom.xml
@@ -955,7 +955,7 @@
  		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-ccs-ws-client-nrg-rest</artifactId>
-			<version>7</version>
+			<version>7-SNAPSHOT</version>
 
  		</dependency>
 		<dependency>
