--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=4.0.0
-release.title=Reliant Sales API Release II
-release.description=Reliant Sales API Release II
-release.date=04/02/2020
+release.version=4.0.1
+release.title=GME Mobile APP API Release
+release.description=GME heatmap and Payment Extension eligibility APIS 
+release.date=04/22/2020
