--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -105,6 +105,6 @@ re.taxonomy.id = 301
 pw.taxonomy.id = TODO
 ce.taxonomy.id = TODO
 gm.taxonomy.id = TODO
-paymentextension.bypass.eligible.flag = X
+paymentextension.bypass.eligible.flag = 
 dpp.bypass.eligible.flag = X
 dpp.default.flag = X
