--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -108,3 +108,4 @@ gm.taxonomy.id = TODO
 paymentextension.bypass.eligible.flag = 
 dpp.bypass.eligible.flag = X
 dpp.default.flag = X
+dpp.no.of.installments=5
