--- a/pom.xml
+++ b/pom.xml
@@ -974,7 +974,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-payment-domain</artifactId>
-			<version>16-SNAPSHOT</version> 
+			<version>9</version> 
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
