20908 : API - Recognize and Store Deposit Waiver Flag

--- a/src/main/resources/properties/db/dbProcedureMapping.properties
+++ b/src/main/resources/properties/db/dbProcedureMapping.properties
@@ -73,3 +73,6 @@ sp.update.person.affiliate.in.param.in_posid_date=in_posid_date
 sp.update.person.affiliate.in.param.in_adv_action_data=in_adv_action_data
 sp.update.person.affiliate.in.param.in_retry_count=in_retry_count
 sp.update.person.affiliate.out.param.out_error_code=out_error_code
+sp.update.person.affiliate.in.param.in_dep_waive_flag=in_dep_waive_flag
+sp.update.person.affiliate.in.param.in_dep_amt_waived_proc=in_dep_amt_waived_proc
+sp.update.person.affiliate.in.param.in_dep_amt_waived=in_dep_amt_waived
