--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
 				<configuration>
-					<argLine>-XX:-UseSplitVerifier</argLine>
+					<argLine>${argLine} -XX:-UseSplitVerifier -Xmx128m</argLine>
 					<reportsDirectory>${basedir}/target/surefire-reports/</reportsDirectory>
 					<testFailureIgnore>false</testFailureIgnore>
 					<skipTests>${skip.unit.tests}</skipTests>
