Creating release version for GMD APP production move

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=4.0.1
-release.title=GME Mobile APP API Release
-release.description=GME heatmap and Payment Extension eligibility APIS 
-release.date=04/22/2020
+release.version=5.0.0
+release.title=GMD Mobile APP API Release
+release.description=GMD APP API Release and Soft launch for Covid 19 Payment extension and DPP eligibility API's 
+release.date=05/27/2020
