added nnp email api

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -58,7 +58,7 @@ cardsecureUrl=https://txaixpiid01:8443/cardsecure/cs
 #################
 
 #OTHER INTERNAL END POINTS
-UTILITY_SERVICE_ENDPOINT_URL=http://stg1-ws.nrgenergy.com/UtilityWebServices/utilityWebServices
+UTILITY_SERVICE_ENDPOINT_URL=http://dev1-ws.nrgenergy.com/UtilityWebServices/utilityWebServices
 ws.endpointURL.addressvalidationDomain=http://dev1-ws.nrgenergy.com/NRGWS02/AddressValidationDomain
 ws.endpointURL.billingDomain=http://dev1-ws.nrgenergy.com/NRGWS02/BillingDomain
 ws.endpointURL.historyDomain=http://dev1-ws.nrgenergy.com/NRGWS02/HistoryDomain
