Adding rate category and offer code for GMD Product

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -25,17 +25,17 @@ ccs.tdsp.web.equivalent.D0009=03109
 
 
 ######################For GMD APP STARTS####################
-gmd.promo.web.equivalent.D0001=ZBZBKZ
-gmd.promo.web.equivalent.D0002=ZBZBM0
-gmd.promo.web.equivalent.D0003=ZBZBM3
-gmd.promo.web.equivalent.D0004=ZBZBM1
-gmd.promo.web.equivalent.D0005=ZBZBM2
+gmd.promo.web.equivalent.D0001=ZDYTKM
+gmd.promo.web.equivalent.D0002=ZDYTKM
+gmd.promo.web.equivalent.D0003=ZDYTKM
+gmd.promo.web.equivalent.D0004=ZDYTKM
+gmd.promo.web.equivalent.D0005=ZDYTKM
 
-gmd.offer.web.equivalent.D0001=11071
-gmd.offer.web.equivalent.D0002=11072
-gmd.offer.web.equivalent.D0003=11075
-gmd.offer.web.equivalent.D0004=11073
-gmd.offer.web.equivalent.D0005=11074
+gmd.offer.web.equivalent.D0001=00011231
+gmd.offer.web.equivalent.D0002=00011232
+gmd.offer.web.equivalent.D0003=00011235
+gmd.offer.web.equivalent.D0004=00011233
+gmd.offer.web.equivalent.D0005=00011234
 
 gmd.offer.efl.equivalent.D0001=09017518825706c2
 gmd.offer.efl.equivalent.D0002=09017518825706c3
