Updated Release notes

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
 release.version=5.0.0
 release.title=GMD Mobile APP API Release
-release.description=GMD APP API Release and Soft launch for Covid 19 Payment extension and DPP eligibility API's 
-release.date=05/27/2020
+release.description=Fix for GMD APP rate category and offer codes 
+release.date=05/29/2020
