--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 				<enabled>true</enabled>
 			</releases>
 			<snapshots>
-			<enabled>${snapshot-enabled}</enabled>
+				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
 			</snapshots>
 		</repository>
@@ -36,11 +36,10 @@
 		<spring-version>3.2.3.RELEASE</spring-version>
 		<dependency.scope>compile</dependency.scope>
 		<snapshot-version>-SNAPSHOT</snapshot-version>
-		<snapshot-enabled>true</snapshot-enabled>
 	</properties>
 	<profiles>
 		<profile>
-			<id>dev-server-profile</id>
+			<id>server-profile</id>
 			<properties>
 				<dependency.scope>compile</dependency.scope>
 				<skip.integration.tests>false</skip.integration.tests>
@@ -49,15 +48,42 @@
 			</properties>
 		</profile>
 		<profile>
-			<id>prod-server-profile</id>
+			<id>release-server-profile</id>
 			<properties>
 				<dependency.scope>compile</dependency.scope>
 				<skip.integration.tests>false</skip.integration.tests>
 				<skip.unit.tests>false</skip.unit.tests>
-				<snapshot-version></snapshot-version>
-				<snapshot-enabled>false</snapshot-enabled>
 				<exclude>**/com/it/reliant/**/*.java</exclude>
 			</properties>
+				<build>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-enforcer-plugin</artifactId>
+							<version>3.0.0-M3</version>
+							<executions>
+								<execution>
+									<id>enforce-no-snapshots</id>
+									<goals>
+										<goal>enforce</goal>
+									</goals>
+									<configuration>
+										<rules>
+											<requireReleaseDeps>
+												<message>No Snapshots Allowed!</message>
+												<excludes>
+													<exclude>org.apache.maven:maven-core</exclude>
+													<exclude>org.apache.maven.plugins:*</exclude>
+												</excludes>
+											</requireReleaseDeps>
+										</rules>
+										<fail>true</fail>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+  				</build>
 		</profile>
 		<profile>
 			<id>local-profile</id>
@@ -71,58 +97,6 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 		</profile>
-		<profile>
-                     <id>karate-profile</id>
-                     <properties>
-                        <skipPluginPhase>true</skipPluginPhase>
-                        <exclude>**/com/reliant/**/*.java</exclude>
-                        <reportsDirectory>${basedir}/target/surefire-reports/</reportsDirectory>
-                     </properties>
-                     
-                   
-                     <build>
-                           <plugins>
-                                  
-                                  <plugin>
-                                 <groupId>net.masterthought</groupId>
-                                 <artifactId>maven-cucumber-reporting</artifactId>
-                                 <version>4.7.0</version>
-                                 <executions>
-                                     <execution>
-                                         <id>execution</id>
-                                         <phase>verify</phase>
-                                         <goals>
-                                             <goal>generate</goal>
-                                         </goals>
-                                         <configuration>
-                                             <projectName>sample-karate-project</projectName>
-                                             <!-- optional, per documentation set this to "true" to bypass generation of Cucumber Reports entirely, defaults to false if not specified -->
-                                             <skip>false</skip>
-                                             <!-- output directory for the generated report -->
-                                             <outputDirectory>${project.build.directory}</outputDirectory>
-                                             <!-- optional, defaults to outputDirectory if not specified -->
-                                             <inputDirectory>${project.build.directory}/surefire-reports</inputDirectory>
-                                             <jsonFiles>
-                                                 supports wildcard or name pattern
-                                                 <param>**/*.json</param>
-                                             </jsonFiles>
-                                             <!-- optional, defaults to outputDirectory if not specified -->
-                                             <classificationDirectory>${project.build.directory}/</classificationDirectory>
-                                             <classificationFiles>
-                                                 supports wildcard or name pattern
-                                                 <param>sample.properties</param>
-                                                 <param>other.properties</param>
-                                             </classificationFiles>
-                                             <!-- <parallelTesting>false</parallelTesting> -->
-                                             <!-- optional, set true to fail build on test failures -->
-                                             <checkBuildResult>true</checkBuildResult>
-                                         </configuration>
-                                     </execution>
-                                 </executions>
-                             </plugin>
-                           </plugins>
-                     </build>
-              </profile>
 	</profiles>
 	<build>
 		<finalName>nrgrest</finalName>
