Reliant Sales APIs - Updated release.properties

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=5.0.0
-release.title=GMD Mobile APP API Release
-release.description=Fix for GMD APP rate category and offer codes 
-release.date=05/29/2020
+release.version=6.0.0
+release.title=Sales APIs Release III
+release.description=API Hardening, POSID Hold, New APIs
+release.date=06/04/2020
