--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=6.0.0
-release.title=Sales APIs Release III
-release.description=API Hardening, POSID Hold, New APIs
-release.date=06/04/2020
+release.version=6.1.0
+release.title=Sales APIs Release 3.1
+release.description=POSID Hold Togglz for DSI, Separate Togglz for Mandatory API Check
+release.date=06/08/2020
