Test data layer changes for API automation.

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 		<spring-version>3.2.3.RELEASE</spring-version>
 		<dependency.scope>compile</dependency.scope>
 		<snapshot-version>-SNAPSHOT</snapshot-version>
+		<mongo.driver.version>3.2.2</mongo.driver.version>
 	</properties>
 	<profiles>
 		<profile>
@@ -1062,6 +1063,11 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.3</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>${mongo.driver.version}</version>
 		</dependency>
 	</dependencies>
 </project>
