Updating release Notes

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=6.1.0
-release.title=Sales APIs Release 3.1
-release.description=POSID Hold Togglz for DSI, Separate Togglz for Mandatory API Check
-release.date=06/08/2020
+release.version=6.2.0
+release.title=Covid 19 features and getContractInfo APIs Release
+release.description=releasing DPP eligibility and  getContract Info response and including FInal and Save Final offers 
+release.date=06/16/2020
