--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -105,7 +105,7 @@ re.taxonomy.id = 301
 pw.taxonomy.id = TODO
 ce.taxonomy.id = TODO
 gm.taxonomy.id = TODO
-paymentextension.bypass.eligible.flag =
+paymentextension.bypass.eligible.flag = X
 dpp.bypass.eligible.flag = X
 dpp.default.flag = X
 dpp.no.of.installments=5
