--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -197,3 +197,5 @@ gmd_price_current_date =04/14/2020
 content.server.endpoint.url=http://txaixebnbld01.retail.nrgenergy.com:18081/client/v2/content.svc/
 #File
 documentum.endpoint=https://dev-texas.xoomenergy.com/files/{0}.pdf
+CUSTOM_ERROR_MESSAGE=Unfortunately, we were unable to find the requested information. We apologize for the inconvenience.\n\nPlease try again later.
+doc.inv.url.timeout=5
