Added time out property  and custom error message for view Invoice PDF files

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -71,7 +71,7 @@ ws.endpointURL.tosDomain=http://dev1-ws.nrgenergy.com/NRGWS02/TOSDomain
 ws.endpointURL.ssDomain=http://stg1-ws.nrgenergy.com/NRGWS02/SSDomain
 ws.endpointURL.temperatureService=http://txaixebxindxd01:13180/UsageHistoryRest
 ws.endpointURL.preferenceDomain=http://dev1-ws.nrgenergy.com/NRGWS02/PreferencesDomain
-EBILL_DOCUMENTUM_END_POINT_URL=http://dev1-ws.nrgenergy.com/DocumentServiceClient/GetEBill
+EBILL_DOCUMENTUM_END_POINT_URL=http://stg1-ws.nrgenergy.com/DocumentServiceClient/GetEBill
 ws.endpointURL.validationDomain=http://dev1-ws.nrgenergy.com/NRGWS02/ValidationDomain
 ws.rest.salesforce.token.service.url=https://dev1-ws.nrgenergy.com/services/oauth2/token
 ws.rest.salesforce.get.account.service.url=https://cs52.salesforce.com/services/apexrest/SharedSolar/Account/
@@ -197,3 +197,5 @@ gmd_price_current_date =04/14/2020
 content.server.endpoint.url=http://txaixebnbld01.retail.nrgenergy.com:18081/client/v2/content.svc/
 #File
 documentum.endpoint=https://dev-texas.xoomenergy.com/files/{0}.pdf
+custom.inv.error.message=We're sorry, but we were unable to retrieve your document. Please try again later.
+doc.inv.url.timeout=20
