--- a/pom.xml
+++ b/pom.xml
@@ -1063,5 +1063,10 @@
 			<version>11.2.0.3</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13</version>
+		</dependency>		
 	</dependencies>
 </project>
