PBI: 41629 add non release title

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
 release.version=6.2.0
-release.title=Covid 19 features and getContractInfo APIs Release
-release.description=releasing DPP eligibility and  getContract Info response and including FInal and Save Final offers 
-release.date=06/16/2020
+release.title=This is not a release but CI CD config.
+release.description=This is not a release but CI CD config. 
+release.date=07/02/2020
